# ARCANUM

./: .gitignore  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
circuits/: README.md
circuits/amount_circuit/: Nargo.toml  Prover.toml
circuits/amount_circuit/src/: main.nr
circuits/compliance_circuit/: Nargo.toml  Prover.toml
circuits/compliance_circuit/src/: main.nr
circuits/solvency_circuit/: Nargo.toml  Prover.toml
circuits/solvency_circuit/src/: main.nr
circuits/toy_circuit/: Nargo.toml  Prover.toml
circuits/toy_circuit/src/: main.nr
contracts/: Cargo.toml
contracts/arcanum_verifier/: Cargo.toml
contracts/arcanum_verifier/src/: lib.rs  test.rs
contracts/zbank_verifier/: Cargo.toml
contracts/zbank_verifier/src/: lib.rs  test.rs
scripts/: copy-bb.mjs
src/: App.css  App.tsx  index.css
src/app/: layout.tsx
src/app/zk-test/: page.tsx
src/circuits/: amount_circuit.json  compliance_circuit.json  solvency_circuit.json
src/components/: ComingSoonBadge.tsx  ComplianceFailureResult.tsx  LandingPage.tsx  ProofGenerationFlow.tsx  RedactedValue.tsx  VerifiedBadge.tsx
src/config/: contracts.ts
src/context/: SessionContext.tsx
src/lib/: useHorizon.ts  zkProver.ts
src/mocks/: compliance.ts  payments.ts  treasury.ts
src/services/: stellarZkService.ts
src/views/: CompliancePanel.tsx  DashboardOverview.tsx  ExplorerComparison.tsx  SendPaymentFlow.tsx  TreasuryOverview.tsx
