[package]
name = "arcanum_verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ultrahonk-soroban-verifier = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
